chore: save session - SonarQube setup, realtime, visit tracking, admin alerts, audits
- SonarQube: docker-compose, scripts (backend/frontend scan), tsconfig.sonar.json, sonar-project.properties, docs/infra/
- Backend: GameRealtimeController + GameRealtimeEventService, VisitTrackingController/Filter/Service, AdminAlertService + thresholds DTOs, AdminVisitAnalyticsService, TeamDomainDtoMapper, NavigationTracking/VisitAnalytics DTOs
- Frontend: GamesRealtimeService + spec, NavigationTrackingService + spec
- Docs: TECH_STACK.md, accessibility audit update
- Tests: GameRealtimeControllerTest, VisitTrackingControllerTest, GameServiceRealtimeEventTest, AdminAlertServiceTest, VisitTrackingServiceTest, PrIngestionServiceRuntimePortsTest
- Backlog: Jira-tache.txt updated

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>