@@ -15,10 +15,8 @@ import org.springframework.transaction.annotation.Transactional;
 
 import com.fortnite.pronos.application.usecase.PlayerQueryUseCase;
 import com.fortnite.pronos.domain.port.out.PlayerRepositoryPort;
+import com.fortnite.pronos.domain.port.out.ScoreRepositoryPort;
 import com.fortnite.pronos.dto.player.PlayerDto;
-import com.fortnite.pronos.model.Player;
-import com.fortnite.pronos.repository.PlayerRepository;
-import com.fortnite.pronos.repository.ScoreRepository;
 
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
@@ -28,19 +26,19 @@ import lombok.extern.slf4j.Slf4j;
 @RequiredArgsConstructor
 @Transactional(readOnly = true)
 public class PlayerService implements PlayerQueryUseCase {
-  private final PlayerRepository playerRepository;
-  private final ScoreRepository scoreRepository;
+  private final com.fortnite.pronos.repository.PlayerRepository playerRepository;
+  private final ScoreRepositoryPort scoreRepository;
 
   /**
-   * OPTIMISÉ: Retourne une page paginée de joueurs au lieu de tous à la fois Critical pour 147
-   * joueurs - évite de surcharger la mémoire et le réseau
+   * OPTIMISÃ‰: Retourne une page paginÃ©e de joueurs au lieu de tous Ã  la fois Critical pour 147
+   * joueurs - Ã©vite de surcharger la mÃ©moire et le rÃ©seau
    */
   @Cacheable(
       value = "playerPages",
       key = "#pageable.pageNumber + '_' + #pageable.pageSize + '_' + #pageable.sort.toString()")
   public Page<PlayerDto> getAllPlayers(Pageable pageable) {
     log.debug(
-        "Récupération paginée des joueurs - page: {}, size: {}",
+        "RÃ©cupÃ©ration paginÃ©e des joueurs - page: {}, size: {}",
         pageable.getPageNumber(),
         pageable.getPageSize());
     return playerRepository.findAll(pageable).map(PlayerDto::fromEntity);
@@ -50,22 +48,23 @@ public class PlayerService implements PlayerQueryUseCase {
     return getAllPlayers(PageRequest.of(0, 200));
   }
 
-  public List<Player> findAllPlayers() {
+  public List<com.fortnite.pronos.model.Player> findAllPlayers() {
     return playerRepository.findAll();
   }
 
-  public java.util.Optional<Player> findPlayerById(UUID id) {
+  public java.util.Optional<com.fortnite.pronos.model.Player> findPlayerById(UUID id) {
     return ((PlayerRepositoryPort) playerRepository).findById(id);
   }
 
-  public List<Player> findPlayersByRegion(Player.Region region) {
+  public List<com.fortnite.pronos.model.Player> findPlayersByRegion(
+      com.fortnite.pronos.model.Player.Region region) {
     return playerRepository.findByRegion(region);
   }
 
   public PlayerDto getPlayerById(UUID id) {
-    log.debug("Récupération du joueur avec l'ID: {}", id);
-    Player player =
-        findPlayerById(id).orElseThrow(() -> new RuntimeException("Joueur non trouvé: " + id));
+    log.debug("RÃ©cupÃ©ration du joueur avec l'ID: {}", id);
+    com.fortnite.pronos.model.Player player =
+        findPlayerById(id).orElseThrow(() -> new RuntimeException("Joueur non trouvÃ©: " + id));
 
     // Calculer les points totaux pour la saison courante du joueur
     Integer totalPoints = scoreRepository.sumPointsByPlayerAndSeason(id, player.getCurrentSeason());
@@ -73,22 +72,22 @@ public class PlayerService implements PlayerQueryUseCase {
     return PlayerDto.from(player, totalPoints != null ? totalPoints : 0, true);
   }
 
-  public List<PlayerDto> getPlayersByRegion(Player.Region region) {
-    log.debug("Récupération des joueurs de la région: {}", region);
-    return findPlayersByRegion(region).stream()
-        .map(PlayerDto::fromEntity)
-        .collect(Collectors.toList());
+  public List<PlayerDto> getPlayersByRegion(com.fortnite.pronos.model.Player.Region region) {
+    log.debug("RÃ©cupÃ©ration des joueurs de la rÃ©gion: {}", region);
+    return findPlayersByRegion(region).stream().map(PlayerDto::fromEntity).toList();
   }
 
   public List<PlayerDto> getPlayersByTranche(String tranche) {
-    log.debug("Récupération des joueurs de la tranche: {}", tranche);
-    return playerRepository.findByTranche(tranche).stream()
-        .map(PlayerDto::fromEntity)
-        .collect(Collectors.toList());
+    log.debug("RÃ©cupÃ©ration des joueurs de la tranche: {}", tranche);
+    return playerRepository.findByTranche(tranche).stream().map(PlayerDto::fromEntity).toList();
   }
 
   public Page<PlayerDto> searchPlayers(
-      String query, Player.Region region, String tranche, boolean available, Pageable pageable) {
+      String query,
+      com.fortnite.pronos.model.Player.Region region,
+      String tranche,
+      boolean available,
+      Pageable pageable) {
     log.debug(
         "Recherche de joueurs avec query: {}, region: {}, tranche: {}", query, region, tranche);
 
@@ -107,17 +106,15 @@ public class PlayerService implements PlayerQueryUseCase {
   }
 
   public List<PlayerDto> getActivePlayers() {
-    log.debug("Récupération des joueurs actifs");
-    return playerRepository.findActivePlayers().stream()
-        .map(PlayerDto::fromEntity)
-        .collect(Collectors.toList());
+    log.debug("RÃ©cupÃ©ration des joueurs actifs");
+    return playerRepository.findActivePlayers().stream().map(PlayerDto::fromEntity).toList();
   }
 
   public Map<String, Object> getPlayersStats() {
-    log.debug("Récupération des statistiques des joueurs");
+    log.debug("RÃ©cupÃ©ration des statistiques des joueurs");
 
     Map<String, Object> stats = new HashMap<>();
-    List<Player> allPlayers = findAllPlayers();
+    List<com.fortnite.pronos.model.Player> allPlayers = findAllPlayers();
 
     stats.put("totalPlayers", allPlayers.size());
     stats.put("playersByRegion", getPlayerCountByRegion(allPlayers));
@@ -126,13 +123,16 @@ public class PlayerService implements PlayerQueryUseCase {
     return stats;
   }
 
-  private Map<String, Long> getPlayerCountByRegion(List<Player> players) {
+  private Map<String, Long> getPlayerCountByRegion(List<com.fortnite.pronos.model.Player> players) {
     return players.stream()
         .collect(Collectors.groupingBy(p -> p.getRegion().name(), Collectors.counting()));
   }
 
-  private Map<String, Long> getPlayerCountByTranche(List<Player> players) {
+  private Map<String, Long> getPlayerCountByTranche(
+      List<com.fortnite.pronos.model.Player> players) {
     return players.stream()
-        .collect(Collectors.groupingBy(Player::getTranche, Collectors.counting()));
+        .collect(
+            Collectors.groupingBy(
+                com.fortnite.pronos.model.Player::getTranche, Collectors.counting()));
   }
 }
