@@ -7,7 +7,6 @@ import java.util.Arrays;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 import javax.sql.DataSource;
 
@@ -19,13 +18,6 @@ import com.fortnite.pronos.dto.admin.DashboardSummaryDto;
 import com.fortnite.pronos.dto.admin.RecentActivityDto;
 import com.fortnite.pronos.dto.admin.SystemHealthDto;
 import com.fortnite.pronos.dto.admin.SystemMetricsDto;
-import com.fortnite.pronos.model.Game;
-import com.fortnite.pronos.model.GameStatus;
-import com.fortnite.pronos.model.Trade;
-import com.fortnite.pronos.model.User;
-import com.fortnite.pronos.repository.GameRepository;
-import com.fortnite.pronos.repository.TradeRepository;
-import com.fortnite.pronos.repository.UserRepository;
 
 import io.micrometer.core.instrument.MeterRegistry;
 import lombok.RequiredArgsConstructor;
@@ -34,20 +26,21 @@ import lombok.extern.slf4j.Slf4j;
 @Slf4j
 @Service
 @RequiredArgsConstructor
+@SuppressWarnings({"java:S1172"})
 public class AdminDashboardService {
 
   private static final int DEFAULT_HOURS = 24;
   private static final int MAX_RECENT_ENTRIES = 10;
 
-  private final UserRepository userRepository;
-  private final GameRepository gameRepository;
-  private final TradeRepository tradeRepository;
+  private final com.fortnite.pronos.repository.UserRepository userRepository;
+  private final com.fortnite.pronos.repository.GameRepository gameRepository;
+  private final com.fortnite.pronos.repository.TradeRepository tradeRepository;
   private final MeterRegistry meterRegistry;
   private final DataSource dataSource;
 
   public DashboardSummaryDto getDashboardSummary() {
     Map<String, Long> gamesByStatus = new LinkedHashMap<>();
-    Arrays.stream(GameStatus.values())
+    Arrays.stream(com.fortnite.pronos.model.GameStatus.values())
         .forEach(s -> gamesByStatus.put(s.name(), gameRepository.countByStatus(s)));
 
     return DashboardSummaryDto.builder()
@@ -71,8 +64,8 @@ public class AdminDashboardService {
     int effectiveHours = hours > 0 ? hours : DEFAULT_HOURS;
     LocalDateTime since = LocalDateTime.now().minusHours(effectiveHours);
 
-    List<Game> recentGames = gameRepository.findByCreatedAtAfter(since);
-    List<Trade> recentTrades = filterRecentTrades(since);
+    List<com.fortnite.pronos.model.Game> recentGames = gameRepository.findByCreatedAtAfter(since);
+    List<com.fortnite.pronos.model.Trade> recentTrades = filterRecentTrades(since);
 
     return RecentActivityDto.builder()
         .recentGamesCount(recentGames.size())
@@ -83,16 +76,17 @@ public class AdminDashboardService {
         .build();
   }
 
-  public List<User> getAllUsers() {
+  public List<com.fortnite.pronos.model.User> getAllUsers() {
     return userRepository.findAll();
   }
 
-  public List<Game> getAllGames(String status) {
+  public List<com.fortnite.pronos.model.Game> getAllGames(String status) {
     if (status == null || status.isBlank()) {
       return gameRepository.findAll();
     }
     try {
-      GameStatus gameStatus = GameStatus.valueOf(status);
+      com.fortnite.pronos.model.GameStatus gameStatus =
+          com.fortnite.pronos.model.GameStatus.valueOf(status);
       return gameRepository.findByStatus(gameStatus);
     } catch (IllegalArgumentException e) {
       log.warn("Invalid game status filter: {}", status);
@@ -171,13 +165,14 @@ public class AdminDashboardService {
     return 0;
   }
 
-  private List<Trade> filterRecentTrades(LocalDateTime since) {
+  private List<com.fortnite.pronos.model.Trade> filterRecentTrades(LocalDateTime since) {
     return tradeRepository.findAll().stream()
         .filter(t -> t.getProposedAt() != null && t.getProposedAt().isAfter(since))
-        .collect(Collectors.toList());
+        .toList();
   }
 
-  private List<RecentActivityDto.ActivityEntry> mapGamesToActivity(List<Game> games) {
+  private List<RecentActivityDto.ActivityEntry> mapGamesToActivity(
+      List<com.fortnite.pronos.model.Game> games) {
     return games.stream()
         .limit(MAX_RECENT_ENTRIES)
         .map(
@@ -188,10 +183,11 @@ public class AdminDashboardService {
                     .status(g.getStatus() != null ? g.getStatus().name() : "UNKNOWN")
                     .createdAt(g.getCreatedAt() != null ? g.getCreatedAt().toString() : "")
                     .build())
-        .collect(Collectors.toList());
+        .toList();
   }
 
-  private List<RecentActivityDto.ActivityEntry> mapTradesToActivity(List<Trade> trades) {
+  private List<RecentActivityDto.ActivityEntry> mapTradesToActivity(
+      List<com.fortnite.pronos.model.Trade> trades) {
     return trades.stream()
         .limit(MAX_RECENT_ENTRIES)
         .map(
@@ -202,6 +198,6 @@ public class AdminDashboardService {
                     .status(t.getStatus() != null ? t.getStatus().name() : "UNKNOWN")
                     .createdAt(t.getProposedAt() != null ? t.getProposedAt().toString() : "")
                     .build())
-        .collect(Collectors.toList());
+        .toList();
   }
 }
