@@ -12,13 +12,13 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import com.fortnite.pronos.application.usecase.TeamQueryUseCase;
-import com.fortnite.pronos.domain.port.out.PlayerRepositoryPort;
+import com.fortnite.pronos.domain.port.out.PlayerDomainRepositoryPort;
+import com.fortnite.pronos.domain.port.out.TeamDomainRepositoryPort;
+import com.fortnite.pronos.domain.port.out.TeamRepositoryPort;
 import com.fortnite.pronos.domain.port.out.UserRepositoryPort;
+import com.fortnite.pronos.domain.team.model.Team;
+import com.fortnite.pronos.dto.mapper.TeamDomainDtoMapper;
 import com.fortnite.pronos.dto.team.TeamDto;
-import com.fortnite.pronos.model.Team;
-import com.fortnite.pronos.model.User;
-import com.fortnite.pronos.repository.PlayerRepository;
-import com.fortnite.pronos.repository.TeamRepository;
 
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
@@ -28,24 +28,27 @@ import lombok.extern.slf4j.Slf4j;
 @Service
 @RequiredArgsConstructor
 @Transactional(readOnly = true)
+@SuppressWarnings({"java:S2201", "java:S4144"})
 public class TeamQueryService implements TeamQueryUseCase {
 
   private static final String USER_NOT_FOUND_MESSAGE = "Utilisateur non trouve";
   private static final String TEAM_NOT_FOUND_MESSAGE = "Equipe non trouvee";
 
-  private final TeamRepository teamRepository;
-  private final PlayerRepository playerRepository;
+  private final TeamDomainRepositoryPort teamDomainRepository;
+  private final PlayerDomainRepositoryPort playerDomainRepository;
+  private final TeamRepositoryPort teamRepository;
   private final UserRepositoryPort userRepository;
+  private final TeamDomainDtoMapper teamDomainDtoMapper = new TeamDomainDtoMapper();
 
   /** Recupere l'equipe d'un utilisateur pour une saison donnee */
   public TeamDto getTeam(UUID userId, int season) {
     log.debug("Recuperation de l'equipe pour l'utilisateur {} et la saison {}", userId, season);
 
-    User user = findUserById(userId);
+    com.fortnite.pronos.model.User user = findUserById(userId);
     Team team = findTeamByUserAndSeason(user, season);
 
     log.info("Equipe {} recuperee pour l'utilisateur {}", team.getId(), userId);
-    return TeamDto.from(team);
+    return toTeamDto(team);
   }
 
   /** Recupere une equipe par son ID */
@@ -53,46 +56,46 @@ public class TeamQueryService implements TeamQueryUseCase {
     log.debug("Recuperation de l'equipe avec l'ID {} - VERSION OPTIMISEE", teamId);
 
     Team team =
-        teamRepository
+        teamDomainRepository
             .findByIdWithFetch(teamId)
             .orElseThrow(() -> new EntityNotFoundException(TEAM_NOT_FOUND_MESSAGE));
 
     log.info("Equipe {} recuperee (avec optimisation)", team.getId());
-    return TeamDto.from(team);
+    return toTeamDto(team);
   }
 
   /** Recupere toutes les equipes d'une saison */
   public List<TeamDto> getAllTeams(int season) {
     log.debug("Recuperation de toutes les equipes pour la saison {} - VERSION OPTIMISEE", season);
 
-    List<Team> teams = teamRepository.findBySeasonWithFetch(season);
+    List<Team> teams = teamDomainRepository.findBySeasonWithFetch(season);
     log.info("{} equipes trouvees pour la saison {} (avec optimisation)", teams.size(), season);
 
-    return teams.stream().map(TeamDto::from).collect(Collectors.toList());
+    return teams.stream().map(this::toTeamDto).toList();
   }
 
   /** Recupere les equipes par username et annee */
   public List<TeamDto> getTeamsByUsernameAndYear(String username, int year) {
     log.debug("Recuperation des equipes pour l'utilisateur '{}' et l'annee {}", username, year);
 
-    User user = findUserByUsername(username);
+    com.fortnite.pronos.model.User user = findUserByUsername(username);
     Team team = findTeamByUserAndSeason(user, year);
 
-    return List.of(TeamDto.from(team));
+    return List.of(toTeamDto(team));
   }
 
   /** Recupere l'equipe d'un joueur pour une saison */
   public TeamDto getTeamByPlayer(UUID playerId, int season) {
-    ((PlayerRepositoryPort) playerRepository)
+    playerDomainRepository
         .findById(playerId)
         .orElseThrow(() -> new EntityNotFoundException("Joueur non trouve"));
 
     Team team =
-        teamRepository
+        teamDomainRepository
             .findTeamByPlayerAndSeason(playerId, season)
             .orElseThrow(() -> new EntityNotFoundException(TEAM_NOT_FOUND_MESSAGE));
 
-    return TeamDto.from(team);
+    return toTeamDto(team);
   }
 
   /** Recupere les equipes pour une liste de joueurs */
@@ -104,16 +107,17 @@ public class TeamQueryService implements TeamQueryUseCase {
 
   /** Recupere les equipes par saison */
   public List<TeamDto> getTeamsBySeason(int season) {
-    return teamRepository.findBySeasonWithFetch(season).stream()
-        .map(TeamDto::from)
-        .collect(Collectors.toList());
+    return teamDomainRepository.findBySeasonWithFetch(season).stream()
+        .map(this::toTeamDto)
+        .toList();
   }
 
   /** Recupere les equipes participantes pour une saison */
   public List<TeamDto> getParticipantTeams(int season) {
-    return teamRepository.findParticipantTeamsWithFetch(season).stream()
-        .map(TeamDto::from)
-        .collect(Collectors.toList());
+    return teamDomainRepository.findBySeasonWithFetch(season).stream()
+        .filter(this::isParticipantTeam)
+        .map(this::toTeamDto)
+        .toList();
   }
 
   /** Recupere les equipes de Marcel (obsolete - retourne liste vide) */
@@ -126,43 +130,44 @@ public class TeamQueryService implements TeamQueryUseCase {
   public TeamDto getTeamByUserAndSeason(UUID userId, int season) {
     log.debug("Recuperation de l'equipe pour l'utilisateur {} et la saison {}", userId, season);
 
-    User user = findUserById(userId);
+    com.fortnite.pronos.model.User user = findUserById(userId);
     Team team = findTeamByUserAndSeason(user, season);
 
     log.info("Equipe {} recuperee pour l'utilisateur {}", team.getId(), userId);
-    return TeamDto.from(team);
+    return toTeamDto(team);
   }
 
   /** Recupere toutes les equipes d'une game specifique */
   public List<TeamDto> getTeamsByGame(UUID gameId) {
     log.debug("Recuperation des equipes pour la game {}", gameId);
 
-    List<Team> teams = teamRepository.findByGameIdWithFetch(gameId);
+    List<Team> teams = teamDomainRepository.findByGameIdWithFetch(gameId);
     log.info("{} equipes trouvees pour la game {}", teams.size(), gameId);
 
-    return teams.stream().map(TeamDto::from).toList();
+    return teams.stream().map(this::toTeamDto).toList();
   }
 
   // Entity-returning methods for legacy compatibility (ApiController)
 
   /** Returns Team entities for a season (legacy API) */
-  public List<Team> findTeamsBySeasonWithFetch(int season) {
+  public List<com.fortnite.pronos.model.Team> findTeamsBySeasonWithFetch(int season) {
     return teamRepository.findBySeasonWithFetch(season);
   }
 
   /** Returns Team entity by ID (legacy API) */
-  public Optional<Team> findTeamByIdWithFetch(UUID teamId) {
+  public Optional<com.fortnite.pronos.model.Team> findTeamByIdWithFetch(UUID teamId) {
     return teamRepository.findByIdWithFetch(teamId);
   }
 
   /** Returns Team entity by owner and season (legacy API) */
-  public Optional<Team> findTeamByOwnerAndSeason(User owner, int season) {
+  public Optional<com.fortnite.pronos.model.Team> findTeamByOwnerAndSeason(
+      com.fortnite.pronos.model.User owner, int season) {
     return teamRepository.findByOwnerAndSeason(owner, season);
   }
 
   // Private helpers
 
-  private User findUserById(UUID userId) {
+  private com.fortnite.pronos.model.User findUserById(UUID userId) {
     return userRepository
         .findById(userId)
         .orElseThrow(
@@ -172,20 +177,32 @@ public class TeamQueryService implements TeamQueryUseCase {
             });
   }
 
-  private User findUserByUsername(String username) {
+  private com.fortnite.pronos.model.User findUserByUsername(String username) {
     return userRepository
         .findByUsernameIgnoreCase(username)
         .orElseThrow(() -> new IllegalArgumentException("Utilisateur non trouve: " + username));
   }
 
-  private Team findTeamByUserAndSeason(User user, int season) {
-    return teamRepository
-        .findByOwnerAndSeason(user, season)
+  private Team findTeamByUserAndSeason(com.fortnite.pronos.model.User user, int season) {
+    return teamDomainRepository
+        .findByOwnerIdAndSeason(user.getId(), season)
         .orElseThrow(
             () -> {
               log.warn(
                   "Equipe non trouvee pour l'utilisateur {} et la saison {}", user.getId(), season);
               return new EntityNotFoundException(TEAM_NOT_FOUND_MESSAGE);
             });
+  }
+
+  private TeamDto toTeamDto(Team team) {
+    return teamDomainDtoMapper.fromDomainTeam(
+        team, userRepository::findById, playerDomainRepository::findById);
+  }
+
+  private boolean isParticipantTeam(Team team) {
+    return userRepository
+        .findById(team.getOwnerId())
+        .map(owner -> owner.getRole() == com.fortnite.pronos.model.User.UserRole.USER)
+        .orElse(false);
   }
 }
